Updated any outdated tests and implemented new tests to improve coverage as needed.